fixedTextJumpWidth

--- a/src/App.css
+++ b/src/App.css
@@ -220,13 +220,14 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
   
 }
 .banner h1 {
-  font-size: 52px;
+  font-size: 58px;
   font-weight: 700;
   letter-spacing: 0.8px;
   line-height: 1;
   margin-bottom: 20px;
   display: block;
   height: 100px;
+  width: 100px;
   
 }
 .banner p {
